configure-agent-priority-class
Signed-off-by: QuentinBisson <quentin@giantswarm.io>

--- a/helm/prometheus-agent/values.yaml
+++ b/helm/prometheus-agent/values.yaml
@@ -82,6 +82,8 @@ prometheus-agent:
     #   replacement: $1
     #   action: replace
 
+  priorityClassName: giantswarm-critical
+
   probeNamespaceSelector: {}
   probeSelector:
     matchExpressions:
