--- a/helm/prometheus-agent/charts/prometheus-agent/values.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/values.yaml
@@ -51,6 +51,8 @@ serviceMonitor:
   #   replacement: $1
   #   action: replace
 
+priorityClassName: giantswarm-critical
+
 probeNamespaceSelector: {}
 probeSelector: {}
 serviceMonitorNamespaceSelector: {}
