--- a/helm/prometheus-agent/Chart.yaml
+++ b/helm/prometheus-agent/Chart.yaml
@@ -6,6 +6,7 @@ dependencies:
   - name: prometheus-agent
     version: v0.3.0
 home: https://github.com/giantswarm/prometheus-agent-app
+kubeVersion: ">=1.19.0-0"
 sources:
   - https://github.com/giantswarm/prometheus-agent-app
 version: 0.5.4
