add topology key

--- a/helm/prometheus-agent/charts/prometheus-agent/templates/prometheus.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/templates/prometheus.yaml
@@ -19,6 +19,7 @@ spec:
               operator: In
               values:
               - prometheus-agent
+          topologyKey: topology.kubernetes.io/zone
   containers:
   - args:
     - --config.file=/etc/prometheus/config_out/prometheus.env.yaml
