Raise WATCHDOG_OVERLOAD_TOLERANCE from 2 to 5 to be more tolerant on desired shards

--- a/helm/prometheus-agent/charts/prometheus-agent/templates/prometheus.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/templates/prometheus.yaml
@@ -47,8 +47,9 @@ spec:
         {{- if .Values.watchdog.command }}
         {{- toYaml .Values.watchdog.command | nindent 8 }}
         {{- else }}
-        - sh
-        - /etc/prometheus/configmaps/prometheus-agent-watchdog/watchdog.sh
+        - /bin/sh
+        - -c
+        - WATCHDOG_OVERLOAD_TOLERANCE=5 sh /etc/prometheus/configmaps/prometheus-agent-watchdog/watchdog.sh
         {{- end }}
     {{- end }}
   configMaps:
