--- a/helm/prometheus-agent/charts/prometheus-agent/templates/prometheus.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/templates/prometheus.yaml
@@ -49,7 +49,7 @@ spec:
         {{- else }}
         - /bin/sh
         - -c
-        - WATCHDOG_OVERLOAD_TOLERANCE=5 sh /etc/prometheus/configmaps/prometheus-agent-watchdog/watchdog.sh
+        - WATCHDOG_OVERLOAD_TOLERANCE={{ .Values.watchdog.watchdogOverloadTolerance }} sh /etc/prometheus/configmaps/prometheus-agent-watchdog/watchdog.sh
         {{- end }}
     {{- end }}
   configMaps:
