--- a/helm/prometheus-agent/charts/prometheus-agent/values.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/values.yaml
@@ -75,6 +75,7 @@ psp:
 
 watchdog:
   enabled: true
+  watchdogOverloadTolerance: 5
   # command:
   #   - sh
   #   - /etc/prometheus/configmaps/prometheus-agent-watchdog/watchdog.sh
