--- a/helm/prometheus-agent/charts/prometheus-agent/values.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/values.yaml
@@ -8,6 +8,8 @@ image:
   sha: ""
   pullPolicy: "Always"
 
+keepDroppedTargets: 0
+
 remoteWrite: []
 # - name: ""     # Name of the remote write integration
 #   proxyUrl: ""
