--- a/helm/prometheus-agent/charts/prometheus-agent/values.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/values.yaml
@@ -8,6 +8,28 @@ image:
   sha: ""
   pullPolicy: "Always"
 
+affinity:
+  nodeAffinity:
+    preferredDuringSchedulingIgnoredDuringExecution:
+    - preference:
+        matchExpressions:
+        - key: karpenter.sh/capacity-type
+          operator: NotIn
+          values:
+          - spot
+      weight: 100
+  podAntiAffinity:
+    preferredDuringSchedulingIgnoredDuringExecution:
+    - podAffinityTerm:
+        labelSelector:
+          matchExpressions:
+          - key: operator.prometheus.io/name
+            operator: In
+            values:
+            - prometheus-agent
+        topologyKey: kubernetes.io/hostname
+      weight: 50
+
 keepDroppedTargets: 0
 
 remoteWrite: []
@@ -16,11 +38,12 @@ remoteWrite: []
 #   url: ""      # URL to send data to
 #   username: "" # Username to use
 #   password: "" # Password
-##  https://github.com/prometheus-community/prometheus-operator/blob/main/Documentation/api.md#queueconfig
+#   # https://github.com/prometheus-community/prometheus-operator/blob/main/Documentation/api.md#queueconfig
 #   queueConfig:
 #     capacity: 30000
 #     maxSamplesPerSend: 10000
 #     maxShards: 10
+#   remoteTimeout: 60
 #   tlsConfig:
 #     insecureSkipVerify: false
 
