--- a/helm/prometheus-agent/Chart.yaml
+++ b/helm/prometheus-agent/Chart.yaml
@@ -6,6 +6,7 @@ dependencies:
   - name: prometheus-agent
     version: 0.6.6
 home: https://github.com/giantswarm/prometheus-agent-app
+icon: https://s.giantswarm.io/app-icons/prometheus/1/light.svg
 kubeVersion: ">=1.19.0-0"
 sources:
   - https://github.com/giantswarm/prometheus-agent-app
