--- a/helm/prometheus-agent/charts/prometheus-agent/values.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/values.yaml
@@ -101,7 +101,8 @@ psp:
 
 watchdog:
   enabled: true
-  watchdogOverloadTolerance: 5
+  overloadTolerance: 5
+  probeTimeout: 3
   # command:
   #   - sh
   #   - /etc/prometheus/configmaps/prometheus-agent-watchdog/watchdog.sh
