--- a/helm/prometheus-agent/values.yaml
+++ b/helm/prometheus-agent/values.yaml
@@ -140,6 +140,7 @@ prometheus-agent:
     enabled: true
     overloadTolerance: 5
     probeTimeout: 3
+    probeRetries: 3
     # command:
     #   - sh
     #   - /etc/prometheus/configmaps/prometheus-agent-watchdog/watchdog.sh
