--- a/helm/prometheus-agent/charts/prometheus-agent/values.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/values.yaml
@@ -88,8 +88,10 @@ podMonitorSelector: {}
 
 # scrapeClasses allows to define relabelings for specific scrape classes that can be used in ServiceMonitors and PodMonitors.
 # More info: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#monitoring.coreos.com/v1.ScrapeClass
-scrapeClasses:
-  - name: giantswarm-servicemonitors
+scrapeClasses: []
+# defaultScrapeClasses is the Giant Swarm scrape classes that can be used in GS ServiceMonitors and PodMonitors.
+defaultScrapeClasses:
+  - name: giantswarm-default
     default: false
     relabelings:
     - sourceLabels: [__meta_kubernetes_pod_label_app_kubernetes_io_name]
@@ -98,18 +100,6 @@ scrapeClasses:
     - sourceLabels: [__meta_kubernetes_node_label_role]
       action: "replace"
       targetLabel: role
-  - name: giantswarm-podmonitors
-    default: false
-    relabelings:
-    - sourceLabels: [__meta_kubernetes_pod_label_app_kubernetes_io_name]
-      action: "replace"
-      targetLabel: app
-    - sourceLabels: [__meta_kubernetes_node_label_role]
-      action: "replace"
-      targetLabel: role
-    - sourceLabels: [__meta_kubernetes_pod_node_name]
-      action: "replace"
-      targetLabel: node
 
 scrapeInterval: 60s
 
