--- a/helm/prometheus-agent/values.yaml
+++ b/helm/prometheus-agent/values.yaml
@@ -126,6 +126,9 @@ prometheus-agent:
       - sourceLabels: [__meta_kubernetes_pod_label_app_kubernetes_io_name]
         action: "replace"
         targetLabel: app
+      - sourceLabels: [__meta_kubernetes_pod_node_name]
+        action: "replace"
+        targetLabel: node
       - sourceLabels: [__meta_kubernetes_node_label_role]
         action: "replace"
         targetLabel: role
