Add scrapeClass to prometheus-agent ServiceMonitor

--- a/helm/prometheus-agent/charts/prometheus-agent/templates/servicemonitor.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/templates/servicemonitor.yaml
@@ -14,6 +14,7 @@ spec:
   namespaceSelector:
     matchNames:
       - {{ .Release.Namespace }}
+  scrapeClass: giantswarm-default
   endpoints:
   - interval: {{ .Values.scrapeInterval }}
     port: web
